# fbb-cli

./: .gitignore  README.md  main.py  pyproject.toml  skills-lock.json
docs/: install.md
script/: install.ps1  install.sh
src/fbb_cli/: __init__.py  __main__.py  cli.py  env_manager.py  requirements.txt
